Tabele, kody procedur i funkci
opis zmian

--- a/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
+++ b/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
@@ -11,11 +11,11 @@
 \usepackage[breaklinks]{hyperref} %
 \usepackage{pracadok}
 \usepackage{longtable}
-%\usepackage{array}
-%\usepackage{geometry}
-%\usepackage{fancyhdr}
+\usepackage{array}
+\usepackage{geometry}
+\usepackage{fancyhdr}
 \usepackage{float}
-
+\usepackage{verbatim}
 \pdfcompresslevel=9
 
 \def\uwaga#1{}
