--- a/dokumentacja - latex/tytul.tex
+++ b/dokumentacja - latex/tytul.tex
@@ -12,8 +12,8 @@
 \hspace{1cm}
 \centering
 \vbox{
-\noindent\textbf{\Huge Projekt bazy danych \\ \vspace{0.3cm}sklepu internetowego}\vspace{0.5cm}\\
+\noindent\textbf{\Huge Projekt bazy danych \\ 
+\vspace{0.3cm}sklepu internetowego}\vspace{0.5cm}\\
 \noindent\textbf{\vspace{0.3cm}Bazy danych}\\
-\noindent\textbf{Prowadzący: Antoni Ligęza}}\\}
-%\noindent e-mail: \verb|aligeza@pwsz-ns.edu.pl|\\
-%\noindent \verb|http://www.pwsz-ns.edu.pl/aligeza|}\\}
+\noindent\textbf{Prowadzący: Antoni Ligęza}}\\
+\noindent e-mail: \verb|aligeza@pwsz-ns.edu.pl|\\}
