Osobny plik na kody źródłowe

--- a/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
+++ b/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
@@ -35,5 +35,6 @@ basicstyle=\scriptsize}
 
 \setcounter{chapter}{0}
 \input{tex/1/main.tex}
+\input{kody_zrodlowe.tex}
 \input{bibrystab.tex}
 \end{document}
