--- a/dokumentacja - latex/tex/1/main.tex
+++ b/dokumentacja - latex/tex/1/main.tex
@@ -260,9 +260,31 @@ Loginy są zapisywane w bazie, raz wykorzystany login nie może być użyty pono
 
 Użytkownik ma możliwość usunięcia konta z serwisu. w takim przypadku muszą zostać usunięte wszystkie jego dane osobowe. Zachowane zostają dane o przeprowadzonych z tym klientem transakcjach bez możliwości jego identyfikacji.
 
-
-
-	
+\subsection{Opis projektu w całkowitym ujęciu}
+Projekt polega na przygotowaniu interfejsu dla 
+\begin{enumerate}
+\item Administratora całego serwisu
+\item Pracownika z przyznanymi mu uprawnieniami
+\item Klienta
+\end{enumerate}
+Administrator ma mieć możliwość:
+\begin{enumerate}
+\item zarządzania kategoriami tzn.: dodawanie/usuwanie/edycja istniejących kategorii
+\item dodawania/usuwania/edycji parametrów produktów
+\end{enumerate}
+Dla użytkownika serwisu przewidziano nastepujące możliwości
+\begin{enumerate}
+\item zarejestrowanie konta w serwisie
+\item dostep do ustawień konta w których znajduje się:
+\begin{itemize}
+\item możliwośc edycji podstawowych danych
+\item możliwość zmiany hasła do konta
+\end{itemize}
+\item koszyk
+\begin{itemize}
+	\item dodawanie produktów do koszyka z możliwością wyboru ilości sztuk
+\end{itemize}
+\end{enumerate}	
 \section{Definiowanie tabel, wiezów integralnosci, perspektyw}
 
 \subsection{Procedury}
@@ -359,3 +381,118 @@ Funkcje wykorzystane w projektowanej bazie danych
 	\end{verbatim}
 \end{enumerate}
 \chapter{Interfejs - strona internetowa}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15 cm] {fig/interfejs}
+	\caption{Interfejs - strona główna}
+	\label{fig:strona_glowna}
+\end{figure}
+Kod strony głównej zawarty w pliku index.php możemy zobaczyć poniżej\\
+\begin{verbatim}
+<?php 
+session\_start();
+include('class/database.php');
+\$DB = database::instance();
+include('class/upr.php');
+include('ctrl/functions.php');
+include('class/klient.php');
+include('class/koszyk.php');
+include('class/transakcja.php');
+sprawdz\_uprawnienia();
+
+if(!isset(\$\_GET['site'])) \$\_GET['site']='';
+include('ctrl/drzewo-kategorii.php');
+ob\_start();
+switch(\$\_GET['site']) \{
+case 'logout': 
+session\_destroy();
+header("Location: \{\$dir\}glowna.html");
+break;
+case 'index':
+case '':
+header("Location: \{\$dir\}glowna.html");
+break;
+case 'glowna':
+//\$htitle = '';
+include('view/glowna.php'); 
+break;
+case 'produkt':
+include('ctrl/produkt.php');
+\$htitle = 'Lista produktów';
+include('view/produkt.php');
+break;
+case 'koszyk':
+include('ctrl/koszyk.php');
+\$htitle = 'Twój koszyk';
+include('view/koszyk.php');
+break;
+case 'login':
+if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login.php');
+\$htitle = 'Klient - logowanie';
+include('view/logowanie.php'); 
+break;
+case 'login-pracownik':
+if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login-pracownik.php');
+\$htitle = 'Pracownik - logowanie';
+include('view/logowanie\_pracownik.php'); 
+break;
+case 'kategoria':
+include('ctrl/kategoria.php');
+\$htitle = 'Zarządzanie kategoriami';
+include('view/kategoria.php'); 
+break;
+case 'produkt-edycja':
+include('ctrl/produkt-edycja.php');
+\$htitle = "Zarządzanie produktami";
+include('view/produkt-edycja.php');
+break;
+case 'produkt-edycja-lista':
+include('ctrl/produkt-edycja-lista.php');
+\$htitle = "Zarządzanie produktami";
+include('view/produkt-edycja-lista.php');
+break;
+case 'rejestracja':
+include('ctrl/rejestracja.php');
+\$htitle = "Rejestracja klienta";
+include('view/rejestracja.php');
+break;
+case 'profil':
+include('ctrl/profil.php');
+\$htitle = "Edycja profilu";
+include('view/profil.php');
+break;
+case 'baza\_klientow':
+include('ctrl/baza\_klientow.php');
+\$htitle = "Baza klientow";
+include('view/baza\_klientow.php');
+break;
+case 'transakcja':
+include('ctrl/transakcja.php');
+\$htitle = "Transakcja";
+include('view/transakcja.php');
+break;
+default:
+header("Location: \{\$dir\}glowna.html");
+exit;
+\}
+\$content = ob\_get\_contents();
+ob\_end\_clean(); 
+include('view/view.php'); 
+/**/
+?>
+\end{verbatim}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics {fig/menu_nie_zalogowany}
+	\caption{Widok menu dla niezalogowanego użytkownika}
+	\label{fig:nie_zalogowany}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics {fig/menu_rozwijanie}
+	\caption{Rozwijanie menu}
+	\label{fig:menu_rozwijalne}
+\end{figure}
