--- a/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
+++ b/dokumentacja - latex/dokumentacja_projektu_bd_sklep_internetowy.tex
@@ -25,7 +25,7 @@
 \lstset{inputencoding=utf8, extendedchars=true,literate={ą}{{\k{a}}}1 {ć}{{\'c}}1 {ę}{{\k{e}}}1 {ł}{{\l{}}}1 {ń}{{\'n}}1 {ó}{{\'o}}1 {ś}{{\'s}}1 {ż}{{\.z}}1 {ź}{{\'z}}1 {Ą}{{\k{A}}}1 {Ć}{{\'C}}1 {Ę}{{\k{E}}}1 {Ł}{{\L{}}}1 {Ń}{{\'N}}1 {Ó}{{\'O}}1 {Ś}{{\'S}}1 {Ż}{{\.Z}}1 {Ź}{{\'Z}}1}
 
 % Tytuł
-\input {tytul.tex}
+\input{tex/tytul.tex}
 \definecolor{tlo}{rgb}{.7,.7,.7} 
 \lstset{language=bash,commentstyle=\scriptsize,backgroundcolor=\color{tlo},%
 basicstyle=\scriptsize}
@@ -34,7 +34,8 @@ basicstyle=\scriptsize}
 {\footnotesize\tableofcontents}
 
 \setcounter{chapter}{0}
-\input{tex/1/main.tex}
-\input{kody_zrodlowe.tex}
-\input{bibrystab.tex}
+\input{tex/main.tex}
+\input{tex/interfejs.tex}
+\input{tex/kody_zrodlowe.tex}
+\input{tex/bibrystab.tex}
 \end{document}
