podmieniony diagram klas

--- a/dokumentacja - latex/tex/interfejs.tex
+++ b/dokumentacja - latex/tex/interfejs.tex
@@ -1,105 +1,10 @@
-\chapter{Interfejs - strona internetowa}
-
+\chapter{Interfejs graficzny - strona internetowa}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15 cm] {fig/interfejs}
+	\includegraphics[width=17cm, height=10cm] {fig/interfejs}
 	\caption{Interfejs - strona główna}
 	\label{fig:strona_glowna}
 \end{figure}
-Kod strony głównej zawarty w pliku index.php możemy zobaczyć poniżej\\
-\begin{verbatim}
-<?php 
-session\_start();
-include('class/database.php');
-\$DB = database::instance();
-include('class/upr.php');
-include('ctrl/functions.php');
-include('class/klient.php');
-include('class/koszyk.php');
-include('class/transakcja.php');
-sprawdz\_uprawnienia();
-
-if(!isset(\$\_GET['site'])) \$\_GET['site']='';
-include('ctrl/drzewo-kategorii.php');
-ob\_start();
-switch(\$\_GET['site']) \{
-case 'logout': 
-session\_destroy();
-header("Location: \{\$dir\}glowna.html");
-break;
-case 'index':
-case '':
-header("Location: \{\$dir\}glowna.html");
-break;
-case 'glowna':
-//\$htitle = '';
-include('view/glowna.php'); 
-break;
-case 'produkt':
-include('ctrl/produkt.php');
-\$htitle = 'Lista produktów';
-include('view/produkt.php');
-break;
-case 'koszyk':
-include('ctrl/koszyk.php');
-\$htitle = 'Twój koszyk';
-include('view/koszyk.php');
-break;
-case 'login':
-if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login.php');
-\$htitle = 'Klient - logowanie';
-include('view/logowanie.php'); 
-break;
-case 'login-pracownik':
-if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login-pracownik.php');
-\$htitle = 'Pracownik - logowanie';
-include('view/logowanie\_pracownik.php'); 
-break;
-case 'kategoria':
-include('ctrl/kategoria.php');
-\$htitle = 'Zarządzanie kategoriami';
-include('view/kategoria.php'); 
-break;
-case 'produkt-edycja':
-include('ctrl/produkt-edycja.php');
-\$htitle = "Zarządzanie produktami";
-include('view/produkt-edycja.php');
-break;
-case 'produkt-edycja-lista':
-include('ctrl/produkt-edycja-lista.php');
-\$htitle = "Zarządzanie produktami";
-include('view/produkt-edycja-lista.php');
-break;
-case 'rejestracja':
-include('ctrl/rejestracja.php');
-\$htitle = "Rejestracja klienta";
-include('view/rejestracja.php');
-break;
-case 'profil':
-include('ctrl/profil.php');
-\$htitle = "Edycja profilu";
-include('view/profil.php');
-break;
-case 'baza\_klientow':
-include('ctrl/baza\_klientow.php');
-\$htitle = "Baza klientow";
-include('view/baza\_klientow.php');
-break;
-case 'transakcja':
-include('ctrl/transakcja.php');
-\$htitle = "Transakcja";
-include('view/transakcja.php');
-break;
-default:
-header("Location: \{\$dir\}glowna.html");
-exit;
-\}
-\$content = ob\_get\_contents();
-ob\_end\_clean(); 
-include('view/view.php'); 
-/**/
-?>
-\end{verbatim}
 
 \begin{figure}[H]
 	\centering
