--- a/dokumentacja - latex/tex/interfejs.tex
+++ b/dokumentacja - latex/tex/interfejs.tex
@@ -6,100 +6,205 @@
 	\caption{Interfejs - strona główna}
 	\label{fig:strona_glowna}
 \end{figure}
-Kod strony głównej zawarty w pliku index.php możemy zobaczyć poniżej\\
-\begin{verbatim}
+Kod pliku wejściowego strony \s!index.php!, na który przekierowywane są wszystkie zapytania z serwisu poprzez moduł \s!mod_rewrite! (ustawienia w pliku \s!.htaccess!) możemy zobaczyć poniżej\\
+\begin{lstlisting}[language=PHP]
 <?php 
-session\_start();
+session_start();
 include('class/database.php');
-\$DB = database::instance();
+$DB = database::instance();
 include('class/upr.php');
 include('ctrl/functions.php');
 include('class/klient.php');
 include('class/koszyk.php');
 include('class/transakcja.php');
-sprawdz\_uprawnienia();
+sprawdz_uprawnienia();
 
-if(!isset(\$\_GET['site'])) \$\_GET['site']='';
+if(!isset($_GET['site'])) $_GET['site']='';
 include('ctrl/drzewo-kategorii.php');
-ob\_start();
-switch(\$\_GET['site']) \{
+ob_start();
+switch($_GET['site']) {
 case 'logout': 
-session\_destroy();
-header("Location: \{\$dir\}glowna.html");
-break;
+	session_destroy();
+	header("Location: {$dir}glowna.html");
+	break;
 case 'index':
 case '':
-header("Location: \{\$dir\}glowna.html");
-break;
+	header("Location: {$dir}glowna.html");
+	break;
 case 'glowna':
-//\$htitle = '';
-include('view/glowna.php'); 
-break;
+	include('view/glowna.php'); 
+	break;
 case 'produkt':
-include('ctrl/produkt.php');
-\$htitle = 'Lista produktów';
-include('view/produkt.php');
-break;
+	include('ctrl/produkt.php');
+	$htitle = 'Lista produktów';
+	include('view/produkt.php');
+	break;
 case 'koszyk':
-include('ctrl/koszyk.php');
-\$htitle = 'Twój koszyk';
-include('view/koszyk.php');
-break;
+	include('ctrl/koszyk.php');
+	$htitle = 'Twój koszyk';
+	include('view/koszyk.php');
+	break;
 case 'login':
-if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login.php');
-\$htitle = 'Klient - logowanie';
-include('view/logowanie.php'); 
-break;
+	if(isset($_POST['login']) AND isset($_POST['password'])) 
+		include('ctrl/login.php');
+	$htitle = 'Klient - logowanie';
+	include('view/logowanie.php'); 
+	break;
 case 'login-pracownik':
-if(isset(\$\_POST['login']) AND isset(\$\_POST['password'])) include('ctrl/login-pracownik.php');
-\$htitle = 'Pracownik - logowanie';
-include('view/logowanie\_pracownik.php'); 
-break;
+	...
 case 'kategoria':
-include('ctrl/kategoria.php');
-\$htitle = 'Zarządzanie kategoriami';
-include('view/kategoria.php'); 
-break;
+	...
 case 'produkt-edycja':
-include('ctrl/produkt-edycja.php');
-\$htitle = "Zarządzanie produktami";
-include('view/produkt-edycja.php');
-break;
+	...
 case 'produkt-edycja-lista':
-include('ctrl/produkt-edycja-lista.php');
-\$htitle = "Zarządzanie produktami";
-include('view/produkt-edycja-lista.php');
-break;
+	...
 case 'rejestracja':
-include('ctrl/rejestracja.php');
-\$htitle = "Rejestracja klienta";
-include('view/rejestracja.php');
-break;
+	...
 case 'profil':
-include('ctrl/profil.php');
-\$htitle = "Edycja profilu";
-include('view/profil.php');
-break;
-case 'baza\_klientow':
-include('ctrl/baza\_klientow.php');
-\$htitle = "Baza klientow";
-include('view/baza\_klientow.php');
-break;
-case 'transakcja':
-include('ctrl/transakcja.php');
-\$htitle = "Transakcja";
-include('view/transakcja.php');
-break;
+	...
+case 'baza_klientow':
+	...
+case 'transakcja': 
+	...
 default:
-header("Location: \{\$dir\}glowna.html");
-exit;
-\}
-\$content = ob\_get\_contents();
-ob\_end\_clean(); 
+	header("Location: {$dir}glowna.html");
+	exit;
+}
+$content = ob_get_contents();
+ob_end_clean(); 
 include('view/view.php'); 
 /**/
 ?>
-\end{verbatim}
+\end{lstlisting}
+
+Wykorzystywane klasy:
+\begin{itemize}
+\item Baza danych w modelu singletona (model, gdzie może istnieć tylko jedna instancja obiektu danej klasy)
+\begin{lstlisting}[language=PHP]
+class database extends mysqli{
+static $THIS; //instancja singletona
+
+private $host 	= 'localhost';
+private $login 	= 'interfejs';
+private $pass 	= '******';
+private $db 	= 'projekt_bazy_sklep';
+
+private function __construct(){
+	parent::__construct($this->host, $this->login, 
+		$this->pass, $this->db);
+}
+
+static function instance(){
+	if(empty(self::$THIS) OR !self::$THIS->ping()) {
+		self::$THIS = new database();
+		self::$THIS->query('SET NAMES \'utf8\'');
+	}
+	return self::$THIS;
+}
+}
+\end{lstlisting}
+	\item Klasa klient
+\begin{lstlisting}[language=PHP]
+class klient {
+	static $zalogowany;
+	static $login;
+	static $klient_id;
+	static $typ;
+	static $imie;
+	static $nazwisko;
+	static $NIP;
+	static $nazwa_firmy;
+	static $dom_adr_wys;
+	
+	static function wyciagnij_dane() {
+	...
+\end{lstlisting}
+\item Koszyk
+\begin{lstlisting}[language=PHP]
+class koszyk {
+	static function &produkty() { ... }
+	static function dodaj($produkt_id, $sztuk) { ... }
+	static function usun($produkt_id) { ... }
+}
+\end{lstlisting}
+\item Uprawnienia
+\begin{lstlisting}[language=PHP,showstringspaces=false]
+class upr {
+	const pracownik	= 'pracownik';
+	const kategoria = 'kategoria';
+	const produkt	= 'produkt';
+	const wysylka = 'wysylka';
+	const klient = 'klient';
+	const raport = 'raport';
+	
+	static function maUprawnienia($upr) {
+		...
+	}
+	
+	static function wyrzucBezUprawnien($upr) {
+		if(self::maUprawnienia($upr)) return;
+		putMessage('Nie masz uprawnień 
+			do przeglądania tej zawartości');
+		header("Location: {$dir}glowna.html");
+		exit;
+	}
+	static function wyrzucStad() {
+		putMessage('Nie masz uprawnień do 
+			przeglądania tej zawartości');
+		header("Location: {$dir}glowna.html");
+		exit;
+	}
+}
+\end{lstlisting}
+\end{itemize}
+
+Każdą z podstron obsługują dołączane z poziomu \s!index.php!:
+\begin{itemize}
+	\item Kontroler - plik z folderu \s!ctrl!, zawierający zapytania do bazy danych i warunkowe wykonanie instrukcji takich jak modyfikacja czy wprowadzanie danych. Przykładowy fragment takiego pliku:
+\begin{lstlisting}[language=PHP]
+if(isset($gkat) && is_numeric($gkat)) {
+	$DB->real_query("call menu_drzewo_kat($gkat)") 
+		OR die($DB->error);
+	$resultSets = array();
+	$i = 0;
+	do {
+		if ($res = $DB->store_result()) {
+			$resultSets[$i++] = 
+				$res->fetch_all(MYSQLI_ASSOC);
+			$res->free();
+		} else if($DB->errno)
+		putMessage($DB->error);
+	} while ($DB->more_results() && $DB->next_result());
+	for($l=count($resultSets)-1; $l>=0; $l--) {
+		foreach($resultSets[$l] as $row) putKat($row);
+	}
+}
+\end{lstlisting}
+	\item Widok - plik z folderu \s!view! zawierający głównie elementy \s!HTML!, tj częsci definiującej wygląd, przykład zawartości:
+\begin{lstlisting}[language=HTML,showstringspaces=false]
+<h2>Klient - logowanie</h2>
+<p>Aby zalogować się na konto, wprowadź login i hasło</p>
+<form class="formularz" action="login.html" method="post" >
+<ul>
+	<li>
+	<label for="login">Login</label>
+	<input type="text" name="login" value="<?php
+	 if(isset($_POST['login']))echo $_POST['login']; ?>" >
+	</li>
+	<li>
+	<label for="password">Hasło</label>
+	<input type="password" name="password" value="<?php
+	 if(isset($_POST['password'])) echo $_POST['password']; ?>" >
+	</li>
+	<li>
+	<input type="submit">
+	</li>
+</ul>
+</form>
+\end{lstlisting}
+\end{itemize}
+
+
 
 \begin{figure}[H]
 	\centering
